--- a/src/gui/fxml/settings/SettingsPane.fxml
+++ b/src/gui/fxml/settings/SettingsPane.fxml
@@ -3,6 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -10,31 +13,67 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="200.0" minWidth="300.0" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SettingsController">
    <children>
-      <Pane layoutX="119.0" layoutY="69.0" prefHeight="163.0" prefWidth="163.0">
-         <children>
-            <Label prefHeight="17.0" prefWidth="163.0" text="Number of words to translate" />
-            <GridPane layoutX="15.0" layoutY="23.0" vgap="5.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <RadioButton fx:id="rbDurationMin" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="Minimum (5)" />
-                  <RadioButton fx:id="rbDurationMid" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="Medium (10)" GridPane.rowIndex="1" />
-                  <RadioButton fx:id="rbDurationLong" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="Long (15)" GridPane.rowIndex="2" />
-                  <RadioButton fx:id="rbDurationAll" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="All" GridPane.rowIndex="3" />
-               </children>
-            </GridPane>
-         </children>
-      </Pane>
-      <Label layoutX="179.0" layoutY="30.0" text="Settings" />
-      <Button layoutX="37.0" layoutY="249.0" mnemonicParsing="false" onAction="#backMenu" prefHeight="25.0" prefWidth="72.0" text="Back" />
+      <Pane layoutX="119.0" layoutY="69.0" prefHeight="163.0" prefWidth="163.0" />
+      <Label layoutX="179.0" layoutY="14.0" text="Settings" />
+      <Button layoutX="14.0" layoutY="261.0" mnemonicParsing="false" onAction="#backMenu" prefHeight="25.0" prefWidth="72.0" text="Back" />
+      <TabPane layoutY="43.0" prefHeight="208.0" prefWidth="400.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Game">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane layoutX="17.0" layoutY="14.0" prefHeight="163.0" prefWidth="342.0" vgap="5.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label prefHeight="17.0" prefWidth="163.0" text="Number of words to translate" />
+                              <RadioButton fx:id="rbDurationMin" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="Minimum (5)" GridPane.rowIndex="1" />
+                              <RadioButton fx:id="rbDurationMid" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="Medium (10)" GridPane.rowIndex="2" />
+                              <RadioButton fx:id="rbDurationLong" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="Long (15)" GridPane.rowIndex="3" />
+                              <RadioButton fx:id="rbDurationAll" mnemonicParsing="false" onMouseClicked="#setDuration" prefHeight="17.0" prefWidth="133.0" text="All" GridPane.rowIndex="4" />
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Application">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane layoutX="10.0" prefHeight="163.0" prefWidth="340.0" vgap="5.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label prefHeight="17.0" prefWidth="163.0" text="Theme" />
+                              <RadioButton fx:id="rbThemeDark" mnemonicParsing="false" onMouseClicked="#setTheme" prefHeight="17.0" prefWidth="133.0" text="Dark" GridPane.rowIndex="1" />
+                              <RadioButton fx:id="rbThemeLime" mnemonicParsing="false" onMouseClicked="#setTheme" prefHeight="17.0" prefWidth="133.0" text="Lime" GridPane.rowIndex="2" />
+                              <RadioButton fx:id="rbThemeRed" mnemonicParsing="false" onMouseClicked="#setTheme" prefHeight="17.0" prefWidth="133.0" text="British" GridPane.rowIndex="3" />
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </Pane>
